# multi-agent-workflow-kit

./: .envrc  .gitignore  .tmux.conf  AGENT-SYNC-WORKFLOW.md  AGENTS.md  CLAUDE.md  ISSUE-FIX-HEY-NEWLINES.md  README.md  pyproject.toml  remove.sh  start.sh  uninstall.sh  uv.toml
.agents/: README.md  agents.sh  agents.yaml  maw.completion.bash  maw.completion.zsh  send-commands.sh  setup.sh  start-agents.sh
.agents/profiles/: profile0.sh  profile1.sh
.agents/scripts/: kill-all.sh  remove.sh  start-agents.sh  uninstall.sh
.claude/: .gitignore  settings.local.json
.claude/commands/: agents-create.md  catlab-sync.sh  codex.md  codex.sh
.claude/prompts/: README.md
.codex/prompts/: README.md  analysis.md  handoff.md
agents/: .gitignore
docs/: architecture.md  branching-strategy.md  operations-checklist.md  testing.md
retrospectives/2025/10/: 2025-10-05_13-53_retrospective.md
scripts/: delete-chore-branches.sh
src/multi_agent_kit/: __init__.py  cli.py  install.py
src/multi_agent_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/multi_agent_kit/assets/: .envrc  AGENTS.md  MAW-AGENTS.md  start.sh  uninstall.sh
src/multi_agent_kit/assets/.agents/: .gitignore  README.md  agents.yaml  kill-all.sh  maw-completion.bash  maw-completion.zsh  maw-env.sh  maw.completion.bash  maw.completion.zsh  maw.env.sh  setup.sh  start-agents.sh
src/multi_agent_kit/assets/.claude/: .gitignore
src/multi_agent_kit/assets/.codex/: .gitignore  README.md
src/multi_agent_kit/assets/agents/: .gitignore  (+5 more)
tests/: test_catlab.py  test_install.py
(+42 files in other folders)
