[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-kit"
version = "0.1.12-alpha"
description = "uvx entry point for bootstrapping the Multi-Agent Workflow Kit."
readme = "README.md"
authors = [{ name = "Multi-Agent Workflow Kit Maintainers" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
multi-agent-kit = "multi_agent_kit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"multi_agent_kit" = ["assets/**", "assets/.*", "assets/.agents/**", "assets/.claude/**", "assets/.codex/**"]
